--- a/Cica.html
+++ b/Cica.html
@@ -6,7 +6,7 @@
     <title>Cica</title>
     <style>
         body{
-            background-color: white;
+            background-color: purple;
             margin: 0px auto;
         }
     </style>
